--- a/blogpost.html
+++ b/blogpost.html
@@ -12,5 +12,5 @@
 </body>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Y este es el parrafo de inicio</p>
-    <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
+    <div class="cabecera">ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA, OTRO CAMBIO</div>
 </html>
