--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
     
 </body>
     <h1>Aqui vamos a hacer un blog post</h1>
+    <h2>HYPERBLOG EN RAMA CABECERA</h2>
     <p>Y este es el parrafo de inicio</p>
     <div class="cabecera">ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA, OTRO CAMBIO</div>
 </html>
