Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,4 +13,7 @@
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Y este es el parrafo de inicio</p>
     <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
+
+    <p>Parrafo con contenido especial</p>
+    <p>Lo blogs con la mejor forma de compartir</p>
 </html>
