modifique cabecera y color de texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
 
     <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
 
-    <p>Parrafo con contenido especial</p>
+    <p>Parrafo con contenido cabecera</p>
     <p>Lo blogs con la mejor forma de compartir</p>
 
 
