--- a/blogpost.html
+++ b/blogpost.html
@@ -16,8 +16,10 @@
 
     <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
 
-    <p>Parrafo con contenido especial</p>
+    <p>Parrafo con contenido master</p>
     <p>Lo blogs con la mejor forma de compartir</p>
+
+    <p>suscribete a master</p>
 
 
 </html>
