--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
     <h1>Aqui vamos a hacer un blog post</h1>
     <h2>HYPERBLOG EN RAMA CABECERA</h2>
     <p>Y este es el parrafo de inicio</p>
+    <p>Línea agregada por karys4 usuario invitado</p>
 
     <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
 
