Modificación a footer por usuario invitado

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,10 @@
     <p>Lo blogs con la mejor forma de compartir</p>
 
     <p>suscribete a master</p>
+    
+    <footer>
+        Acabo de agregar el Footer (soy el usuario invitado)
+    </footer>
 
 
 </html>
