--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,8 @@
     <p>Lo blogs con la mejor forma de compartir</p>
 
     <p>suscribete a master</p>
+
+    <p>Este es una arreglo de fix typo</p>
     
     <footer>
         Acabo de agregar el Footer (soy el usuario invitado)
