--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
     <p>Y este es el parrafo de inicio</p>
     <p>Línea agregada por karys4 usuario invitado</p>
 
+
     <p>ESTE ES UN CAMBIO PARA CREAR LA RAMA CABECERA</p>
 
     <p>Parrafo con contenido cabecera</p>
@@ -23,6 +24,7 @@
     <p>suscribete a master</p>
 
     <p>Este es una arreglo de fix typo</p>
+    <p>Cambio solicitado en el review</p>
     
     <footer>
         Acabo de agregar el Footer (soy el usuario invitado)
