Update como open Source karys4

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,7 @@
 
     <p>Este es una arreglo de fix typo</p>
     <p>Cambio solicitado en el review</p>
+    <p>Estoy contribuyendo como karys4 de manera open source</p>
     
     <footer>
         Acabo de agregar el Footer (soy el usuario invitado)
